# Prism

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  turbo.json
.github/: CODEOWNERS  REPOSITORY_STRUCTURE.md
.github/workflows/: ci.yml
_docs/: 2025-11-02_Prism-v1.0.0-Complete-Migration.md
apps/desktop/desktop/: electron-builder.yml  package.json
apps/desktop/desktop/src/main/: index.ts
apps/desktop/desktop/src/preload/: index.ts
extensions/viz-web/: .gitignore  README.md  run-dev.ps1  run-dev.sh
extensions/viz-web/backend/: Cargo.toml  README.md
extensions/viz-web/backend/src/: main.rs  types.rs  websocket.rs
extensions/viz-web/backend/src/api/: branches.rs  collaboration.rs  commits.rs  files.rs  mod.rs  streaming.rs
extensions/viz-web/backend/src/git/: analyzer.rs  mod.rs  watcher.rs
extensions/viz-web/desktop/: README.md  package.json
extensions/viz-web/frontend/: README.md  index.html  package.json  vite.config.ts
extensions/viz-web/frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
extensions/viz-web/frontend/src/components/: BookmarksPanel.css  BookmarksPanel.tsx  BranchStructure3D.tsx  CommentPanel.css  CommentPanel.tsx  CommitGraph3D.tsx  CommitGraph3DLOD.tsx  CommitGraph3DOptimized.tsx  ControlPanel.css  ControlPanel.tsx  FileHeatMap.tsx  KeyboardShortcutsHelp.css  KeyboardShortcutsHelp.tsx  LoadingScreen.tsx  PerformanceMonitor.css  PerformanceMonitor.tsx  RealtimeMonitor.css  RealtimeMonitor.tsx  SearchBar.css  SearchBar.tsx  ShareDialog.css  ShareDialog.tsx  TimelineSlider.css  TimelineSlider.tsx  Toast.css  Toast.tsx
extensions/viz-web/frontend/src/hooks/: useBookmarks.ts  useGitData.ts  useKeyboardShortcuts.ts  useStreamingData.ts  useWebWorker.ts
extensions/viz-web/frontend/src/lib/: api.ts
extensions/viz-web/frontend/src/styles/: theme.ts
extensions/viz-web/frontend/src/utils/: gpuOptimization.ts
extensions/viz-web/frontend/src/workers/: gitAnalyzer.worker.ts
kernel-extensions/kernel-extensions/: README.md
kernel-extensions/kernel-extensions/ai-native-os/: DESIGN.md
kernel-extensions/kernel-extensions/benchmarks/: stress_test.py
kernel-extensions/kernel-extensions/codex-integration/: Cargo.toml
kernel-extensions/kernel-extensions/codex-integration/src/: lib.rs
kernel-extensions/kernel-extensions/linux/ai_gpu/: Makefile  ai_gpu.c
kernel-extensions/kernel-extensions/linux/ai_mem/: Makefile  ai_mem.c
kernel-extensions/kernel-extensions/linux/ai_scheduler/: Makefile  ai_scheduler.c
kernel-extensions/kernel-extensions/linux/ebpf/: gpu_tracer.c
kernel-extensions/kernel-extensions/packaging/: dkms.conf
kernel-extensions/kernel-extensions/packaging/debian/: control  postinst  prerm
kernel-extensions/kernel-extensions/rust/ai_scheduler_rs/: Cargo.toml
kernel-extensions/kernel-extensions/rust/ai_scheduler_rs/src/: lib.rs
kernel-extensions/kernel-extensions/rust/ai_scheduler_rs/tests/: integration_test.rs
kernel-extensions/kernel-extensions/rust/gpu_bindings/: Cargo.toml
kernel-extensions/kernel-extensions/rust/gpu_bindings/src/: lib.rs
kernel-extensions/kernel-extensions/security/: kasan-test.sh  valgrind-test.sh
kernel-extensions/kernel-extensions/tools/: ai_monitor.py
kernel-extensions/kernel-extensions/windows/ai_driver/: ai_driver.c  ai_driver.inf  sources
kernel-extensions/kernel-extensions/windows/codex_win_api/: Cargo.toml
kernel-extensions/kernel-extensions/windows/codex_win_api/src/: lib.rs
kernel-extensions/kernel-extensions/windows/etw_provider/: ai_etw_provider.man
mcp-servers/gemini-cli-mcp/: Cargo.toml
mcp-servers/gemini-cli-mcp/src/: lib.rs  main.rs  oauth.rs
mcp-servers/gemini-cli-mcp/tests/: mcp_integration_test.rs
