[package]
name = "codex-win-api"
version = "0.2.0"
edition = "2024"
authors = ["zapabob"]
license = "Apache-2.0"
description = "Windows AI Driver API bindings"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Etw",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
# None

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"

